# todoapp_backend

./: .coverage  .dockerignore  .env  .gitignore  Dockerfile  README.md  audit_logs.json  pyproject.toml  render.yaml  requirements.txt  tasks.json  tasks.md
src/: __init__.py  crud.py  database.py  main.py  models.py
src/api/: audit.py  chat.py  health.py  tasks.py  websocket.py
src/db/: session.py
src/dependencies/: auth.py
src/events/: publishers.py
src/mcp/: __init__.py
src/mcp/tools/: task_tools.py
src/models/: __init__.py  conversation.py  events.py  task.py  user.py
src/schemas/: chat.py  task.py  user.py
src/services/: audit.py  chatbot.py  dapr_client.py  kafka_producer.py  session.py
src/tests/: test_chatbot.py  test_models.py  test_recurrence.py  test_storage.py
